<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context="com.krystian.checkers.MainActivity">

    <Button android:id="@+id/play"
        style = "@style/MainButtons"
        android:text="@string/play_button" />

    <Button android:id="@+id/stats"
        style = "@style/MainButtons"
        android:text="@string/stats_button" />

    <Button android:id="@+id/history"
        style = "@style/MainButtons"
        android:text="@string/games_history_button" />

</LinearLayout>
